force-app/main/default/objects/AEQCC_Performance_Historical__c/AEQCC_Performance_Historical__c.object-meta.xml
<CustomObject>
    <label>AMEX Performance Historical</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>AEQCC Performance Historical Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMEX Performance Historical</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>