force-app/main/default/objects/AEQCC_Performance_Historical__c/fields/Other_Airlines_Dom_CV__c.field-meta.xml
<CustomField>
    <fullName>Other_Airlines_Dom_CV__c</fullName>
    <inlineHelpText>Other Carrier Domestic Expenditure</inlineHelpText>
    <label>Other Airlines Dom CV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>