force-app/main/default/objects/AEQCC_Performance_Historical__c/fields/Product_Link__c.field-meta.xml
<CustomField>
    <fullName>Product_Link__c</fullName>
    <label>Product Link</label>
    <referenceTo>Product_Registration__c</referenceTo>
    <relationshipName>AEQCC_Performance_Historical</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>