force-app/main/default/objects/AEQCC_Performance_Historical__c/fields/Qantas_CV__c.field-meta.xml
<CustomField>
    <fullName>Qantas_CV__c</fullName>
    <label>Qantas CV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>