force-app/main/default/objects/AEQCC_Performance_Historical__c/fields/QF_Dom_CV__c.field-meta.xml
<CustomField>
    <fullName>QF_Dom_CV__c</fullName>
    <label>QF Dom CV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>