force-app/main/default/objects/AEQCC_Performance_Historical__c/fields/QF_Dom_MS__c.field-meta.xml
<CustomField>
    <fullName>QF_Dom_MS__c</fullName>
    <formula>IF(Total_Domestic__c != 0, QF_Dom_CV__c  /  Total_Domestic__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Dom MS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>