force-app/main/default/objects/AEQCC_Performance_Historical__c/fields/Total_Air__c.field-meta.xml
<CustomField>
    <fullName>Total_Air__c</fullName>
    <formula>Qantas_CV__c  +  Other_Airlines_CV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Air</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>